# model-renderer

./: CMakeLists.txt  README.md  RENDEL  main.cpp  main.h
ext/glbugui/: glbugui.h
ext/mesh/: mesh.cpp  mesh.h
ext/model/: model.cpp  model.h
ext/renderer/: renderer.cpp  renderer.h
ext/shade/: shade.cpp  shade.h
ext/window/: window.cpp  window.h
src/include/glcam/: glcam.h
src/include/glshader/: glshader.h
src/textures/: text.frag  text.vert
